--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,3 +9,9 @@ html, body {
 * {
   font-size: 1rem;
 }
+
+#root {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  overflow: hidden;
+}
